
2004-10-19  Steve Harris  <steve@plugin.org.uk>

	Release 0.13
	* lo.h: removed reference to obsolete header lo_backcompat.h

2004-10-17  Steve Harris  <steve@plugin.org.uk>

	* lo_server.c: added code to allow servers to poll() on the server
	  socket, if available. From Sean Bolton.

2004-08-27  Steve Harris  <steve@plugin.org.uk>

	* lo_lowlevel.h, send.c: added OSX compatibility fixes from Taybin
	  Rutkin.

2004-08-19  Steve Harris  <steve@plugin.org.uk>

	Release 0.9
	* testlo.c: added more URL tests

2004-08-19  Steve Harris  <steve@plugin.org.uk>

	* address.c: more bugfixes to URL handling

2004-08-02  Steve Harris  <steve@plugin.org.uk>

	* server.c, address.c: fixed bugs and ommisions in URL handling

2004-07-28  Steve Harris  <steve@plugin.org.uk>

	* send.c, server.c: added code to handle UNIX domain sockets.

2004-07-12  Steve Harris  <steve@plugin.org.uk>

	* server_thread.c: added a lo_server_thread_stop() function for
	  symmetry with lo_server_thread_start()

2004-06-07  Steve Harris  <steve@plugin.org.uk>

	* server.c: added a lo_server_recv_noblock() that will not wait for
	  a packet to be received

2004-03-26  Steve Harris  <steve@plugin.org.uk>

	* doc/, *.h: added doxygen documentation
	* address.c: changed URL methods to accept/expect protocol
	  specifiers (eg. osc.udp://...)
	* examples/*.c: added comments, slightly simplified

2004-03-21  Steve Harris  <steve@plugin.org.uk>

	* server.c: made binding to unspecified ports work

2004-03-21  Steve Harris  <steve@plugin.org.uk>

	* message.c: fixed coercion type bugs
	* server.c: fixed endian conversion bug
	* testlo.c: added lots of tests
	* send.c: added implicit guard variable to end of send arguments

2004-03-20  Steve Harris  <steve@plugin.org.uk>

	* message.c, send.c: added support for the remaining types OSC

2004-03-15  Steve Harris  <steve@plugin.org.uk>

	* message.c: changed the definition of the string argument accessor
	  member (it was wrong before).
